tests/NormalTests/paczka1/small_fuzzy/51991043.err
Error in line 6: sJC S352 -1,5
Error in line 4: sJC S352 22,6
Error in line 5: fBY A846 20,8
